--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,6 @@
     <title>Inicio</title>
 </head>
 <body>
-    <h1>¡Bienvenido a mi aplicación Flask!</h1>
-    <p>Esto es una prueba para desarrollar un chatbot</p>
-    <p>Esta es la página de inicio.</p>
-    <a href="/chatbot">Ir a ChatBot</a>
-    <p>   </p>
-    <a href="/about">Ir a Acerca de</a>
+    <h1>¡Bienvenido a mi aplicación de Chatbot!</h1>
 </body>
 </html>
